--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <body>
 <p><strong>Privacy Policy</strong></p>
-<p>We, Djebliapps, developed this product or service (Game) as an Ad Supported app and published in Google Play Store and Apple App Store. This Game is provided by Us(Djebliapps) at no cost and is intended for use as is.</p>
+<p>We, <strong>Djebliapps</strong>, developed this product or service (Game) as an Ad Supported app and published in Google Play Store and Apple App Store. This Game is provided by Us <strong>(Djebliapps)</strong> at no cost and is intended for use as is.</p>
 <p>This page is used to inform users (you) regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
 <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that We collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
 <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at our apps/games unless otherwise defined in this Privacy Policy.</p>
