--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <li><a href="https://adssettings.google.com/u/0/">Opt-out of targeted ads by Google</a></li>
 <li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
 <li><a href="http://try.crashlytics.com/terms/privacy-policy.pdf">Crashlytics</a></li>
-<li><a href="https://www.applovin.com/privacy/">Applovin</a></li>
+<li><a href="https://www.facebook.com/ads/manage/audience_network/publisher_tos/">Facebook Audience Network</a></li>
 </ul>
 <p>&nbsp;</p>
 <p><strong>Log Data</strong></p>
@@ -46,7 +46,7 @@
 <p>These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case We discover that a child under 13 has provided us with personal information, We immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that We will be able to do necessary actions.</p>
 <p>&nbsp;</p>
 <p><strong>Changes to This Privacy Policy</strong></p>
-<p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+<p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page. (last update 3/6/2019) </p>
 <p>&nbsp;</p>
 <p><strong>Contact Us</strong></p>
 <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</p>
